# pinentry-tmux

./: .copier-answers.yml  .gitignore  AGENTS.md  GNUmakefile  LICENSE  README.md  development.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
devtools/: lint.py
doc/: development.md  installation.md  publishing.md
doc/ai/instructions/: python.md
src/pinentry_tmux/: __init__.py
src/pinentry_tmux/cli/: __init__.py  pinentry_tmux.py
src/pinentry_tmux/lib/: __init__.py  assuan.py  utils.py
src/pinentry_tmux/model/: __init__.py  pinentry.py
src/pinentry_tmux/ui/: __init__.py  dialog.py  pinentry_dialog.py  pinentry_tmux.ui.tcss
tests/unit/: test_pinentry_tmux.py  test_pinentry_tmux_input1.txt  test_pinentry_tmux_input_timeout.txt  test_pinentry_tmux_output1.txt  test_pinentry_tmux_output_timeout.txt
