# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/qualIP/pinentry-tmux"
Homepage = "https://github.com/qualIP/pinentry-tmux"
# Documentation = "https://..."

[project]
name = "pinentry-tmux"
description = "pinentry-tmux is a pinentry application for TTY and tmux use."
authors = [
    { name="Jean-Sebastien Trottier", email="jst@qualipsoft.com" },
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13,<4.0"
dynamic = ["version"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    # TEMP: Include this to avoid accidentally publishing to PyPI:
    "Private :: Do Not Upload",
]


# ---- Main dependencies ----

dependencies = [
    "rich>=14.0.0",
    "textual>=6.11",
]


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-sugar>=1.0.0",
    "ruff>=0.11.9",
    "codespell>=2.4.1",
    "basedpyright>=1.29.1",
    "funlog>=0.2.1",
    "requests",
]

[project.scripts]
# Add script entry points here:
pinentry-tmux = "pinentry_tmux.cli.pinentry_tmux:main"


# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["src/pinentry_tmux"]


# ---- Settings ----

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = [
    # See: https://docs.astral.sh/ruff/rules/
    # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
    "E", # https://docs.astral.sh/ruff/rules/#error-e
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    # Other possibilities:
    # "D" # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "Q" # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    # "COM" # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    # "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
]
ignore = [
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "UP015", # https://docs.astral.sh/ruff/rules/redundant-open-modes/
]

[tool.basedpyright]
include = [
    "src",
    "tests",
    "devtools",
]

reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportUninitializedInstanceVariable = false
reportUnusedCallResult = false
reportUnusedParameter = false

[tool.codespell]
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "src",
    "tests",
]
norecursedirs = []
filterwarnings = []
